platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/traces/exam.exams-curated-exam01-v1.ce4e08c8.attempt.001/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/workspaces/exam.exams-curated-exam01-v1.ce4e08c8.attempt.001/submission/fix_z.c:1:2: error: #error forced failing integration submission
    1 | #error forced failing integration submission
      |  ^~~~~
